<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/supported_one"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        />

    <EditText xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/edit_message"
        style="@style/DetailsStyle"
        tools:context=".supportedDetailFragment"
        android:gravity="center_horizontal"
        android:inputType="textCapSentences|textAutoCorrect"
        android:hint="@string/message_prompt"
        />

</LinearLayout>